[package]
name = "ash-gpu"
version = "0.1.0"
authors = ["Henno <henno.trost@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31"
ash-window = "0.5"
winit = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.20"
cfg-if = "1.0.0"
rustc_codegen_spirv = { path = "C:\\Users\\henno\\henno\\rust_projects\\rust-gpu\\crates\\rustc_codegen_spirv" }
